--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,16 @@
         <task.center.api.version>1.0.10-SNAPSHOT</task.center.api.version>
         <rotate.org.api.version>2.8-SNAPSHOT</rotate.org.api.version>
         <cas.client.core.product.version>3.2.1-memcached.STABLE.4</cas.client.core.product.version>
+        <arts.version>1.2.9</arts.version>
     </properties>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.dp.arts</groupId>
+                <artifactId>arts-client</artifactId>
+                <version>${arts.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>net.sf.dozer</groupId>
                 <artifactId>dozer</artifactId>
