--- a/rotate-admin-biz/pom.xml
+++ b/rotate-admin-biz/pom.xml
@@ -101,6 +101,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.dianping</groupId>
             <artifactId>ba-base-organizationalstructure-api</artifactId>
         </dependency>
